--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "node": "16.x"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -18,6 +19,7 @@
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.5.0",
     "react-scripts": "4.0.3",
+    "redux-devtools-extension": "^2.13.9",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
